fixed button spacing

--- a/main.css
+++ b/main.css
@@ -130,6 +130,10 @@ a:hover:after :not(.nav-item.dropdown), table.table a:hover:after :not(.nav-item
   width: 100%;
 }
 
+.btn{
+  margin: 1px;
+}
+
 figure, img {
   max-width: 90vw;
 }
